# SysVibe

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config-plan.md  context.md  export-plan.md  gpu-tab-plan.md  install.sh  progress.md  tests-plan.md  uninstall.sh
.github/workflows/: ci.yml
docs/: implementation-plan-ui-ux-pi_agent.md  ui-ux-audit-report-antigravity.md  ui-ux-audit-report-pi_agent.md
src/: app.rs  config.rs  lib.rs  main.rs  ui.rs
src/app/: accessors.rs  command_palette.rs  error.rs  events.rs  events_dispatch.rs  gpu_view.rs  helpers.rs  log_view.rs  messages.rs  mod.rs  mutations.rs  network_view.rs  process_ops.rs  process_view.rs  processes.rs  refresh.rs  sample.rs  state.rs  state_update.rs  tick.rs
src/app/collectors/: cpu.rs  disk.rs  export.rs  gpu.rs  hardware.rs  logs.rs  mod.rs  network.rs  sensors.rs
src/app/collectors/android/: battery.rs  disk.rs  gpu.rs  hardware.rs  logs.rs  mod.rs
src/app/collectors/linux/: battery.rs  disk.rs  gpu.rs  hardware.rs  logs.rs  mod.rs
src/ui/: footer.rs  header.rs  helpers.rs  icons.rs  mod.rs  palette.rs  preview.rs  theme.rs
src/ui/tabs/: dashboard.rs  gpu.rs  hardware.rs  logs.rs  mod.rs  processes.rs  system.rs
src/ui/widgets/: mod.rs  modal.rs  sparkline.rs
tests/: config_tests.rs  error_tests.rs  eventstream_tests.rs  helpers_tests.rs  mod.rs  process_tests.rs  state_tests.rs  theme_tests.rs
