[features]
preview = ["dep:unicode-width"]

[lib]
name = "sysvibe"
path = "src/lib.rs"

[[bin]]
name = "sysvibe"
path = "src/main.rs"

[[bin]]
name = "svshot"
path = "src/bin/svshot.rs"
required-features = ["preview"]

[package]
name = "sysvibe"
version = "0.5.0"
edition = "2024"
description = "A modern, zero-flicker system monitor TUI for Linux & Android (Termux)"
authors = ["SysVibe Team"]
license = "MIT"
repository = "https://github.com/harunkrl/SysVibe"
keywords = ["system-monitor", "tui", "linux", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
sysinfo = "0.34"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
chrono = "0.4"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "sync",
  "time",
  "macros",
] }
tokio-stream = "0.1"
futures-util = "0.3"
serde_json = "1"
thiserror = "2"
unicode-width = { version = "0.2", optional = true }
