[features]
preview = ["dep:unicode-width"]

[profile.release]
# Smaller, faster release binaries for `cargo install --locked --path .`.
lto = "thin"
codegen-units = 1
strip = true

[lib]
name = "vitalis"
path = "src/lib.rs"

[[bin]]
name = "vitalis"
path = "src/main.rs"

[[bin]]
name = "svshot"
path = "src/bin/svshot.rs"
required-features = ["preview"]

[package]
name = "vitalis"
version = "0.5.0"
edition = "2024"
# MSRV: the codebase uses let-chains (`if .. && let ..`), stable since 1.88.
rust-version = "1.88"
description = "A modern, zero-flicker system monitor TUI for Linux & Android (Termux)"
authors = ["Vitalis Team"]
license = "MIT"
repository = "https://github.com/harunkrl/Vitalis"
keywords = ["system-monitor", "tui", "linux", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
sysinfo = "0.34"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
chrono = "0.4"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "sync",
  "time",
  "macros",
] }
tokio-stream = "0.1"
futures-util = "0.3"
serde_json = "1"
thiserror = "2"
unicode-width = { version = "0.2", optional = true }
